--- a/views/500.ejs
+++ b/views/500.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Не найдено</title>
+	<title>Ошибка</title>
 	<meta charset="utf-8">
 </head>
 <body>
-	<h3>Страница не найдена :(</h3>
+	<h3>Что-то пошло не так :(</h3>
 	<style type="text/css">
 		h3 {
 			color: red;
