--- a/views/admin/adduser.ejs
+++ b/views/admin/adduser.ejs
@@ -29,6 +29,6 @@
 
 	<script type="text/javascript" src="../jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="../carhartl-jquery-cookie-92b7715/jquery.cookie.js"></script>
-	<script type="text/javascript" src="../admin/admin.js"></script>
+	<script type="text/javascript" src="../admin/adduser.js"></script>
 </body>
 </html>
