--- a/public/list.css
+++ b/public/list.css
@@ -1,6 +1,6 @@
 table {
-	width: 95%;
-	margin: 7px 0;
+	width: auto;
+	margin: 5px;
 	text-align: center;
 	border: 2px solid rgba(34,36,38,.1);
     box-shadow: none;
@@ -10,6 +10,18 @@ table {
 	font-size: 16px;
 	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
 }
+@media(max-width: 1600px) {
+	 table{
+	  font-size: 14px;
+	}
+  }
+@media(max-width: 980px) {
+     table{
+	  font-size: 11px;
+	}
+  }
+ 
+
 th {
     border-spacing: 0;
 	box-shadow: none;
@@ -32,6 +44,9 @@ th, td {
 td {
 	background: rgba(244, 246, 248, 0.226);
 }
+
+
+
 .nametable {
 	color: rgb(0, 0, 0);
 	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
