--- a/views/admin/partials/tablekpi.ejs
+++ b/views/admin/partials/tablekpi.ejs
@@ -7,12 +7,9 @@
 		<th colspan="6"><h4>Группы</h4></th>
 	</tr>
 	<tr class="row2">
-		<th><h4>Декан</h4></th>
-		<th><h4>Зав. кафедрой</h4></th>
-		<th><h4>Профессор</h4></th>
-		<th><h4>Доцент</h4></th>
-		<th><h4>Ст. преподаватель</h4></th>
-		<th><h4>Ассистент/преподаватель</h4></th>
+		<% for(let i = 0; i < positions.length; i++) {%>
+			<th><h4><%=positions[i]%></h4></th>
+		<%} %>
 	</tr>
 	<% for(let u = 0; u < kpi.length; u++) {%>
 		<% if(kpi[u].length != 0) {%>
@@ -22,50 +19,37 @@
 					<h4>Раздел <%=(u+1) + ". " + kpi[u][0].section %></h4>
 				</td>
 			</tr>
-			<% top: for(let i = 0; i < kpi[u].length; i++) {%>
-				<% let arr = kpi[u]; %>
-					<% if(arr[i].type == 1) {%>
+			<% let arr = kpi[u]; %>
+			<% for(let i = 0; i < arr.length; i++) {%>
+				<% if(arr[i].type == 1) {%>
 					<tr>
-						<td rowspan=<%=arr[i].count_criterion + ""%>><%=arr[i].name %></td>
-						<td rowspan=<%=arr[i].count_criterion + ""%>><%=arr[i].description %></td>
-						<% for(let j = 0; j < arr[i].count_criterion; j++) {%>
+						<td rowspan="<%=arr[i].count_criterion%>"><%=arr[i].name %></td>
+						<td rowspan="<%=arr[i].count_criterion%>"><%=arr[i].description %></td>
+						<% for(let j = 0; j < arr[i].lines.length; j++) {%>
 							<% if(j != 0) {%>
 								</tr><tr>
 							<%} %>
-							<td><%=arr[i].name_criterion %></td>
-							<% for(let k = 0; k < arr[i].balls.length; k++) {%>
-								<td><big><%=arr[i].balls[k] %></big></td>
-							<%} %>
-							<% if(i != kpi[u].length && j != arr[i].count_criterion - 1) {%>
-								<% i = i + 1; %>
-							<%} %>
-							<% if(i == kpi[u].length) {%>
-								</tr><tr>
-								<% break top; %>
+							<td><%=arr[i].lines[j].name %></td>
+							<% for(let k = 0; k < arr[i].lines[j].balls.length; k++) {%>
+								<td><big><%=arr[i].lines[j].balls[k] %></big></td>
 							<%} %>
 						<%} %>
-						<% continue top; %>
 					</tr>
 					<%} %>
 					<% if(arr[i].type == 2) {%>
 					<tr>
-						<td rowspan=<%=(arr[i].count_criterion + 1) + "" %>><%=arr[i].name %></td>
+						<td rowspan="<%=(arr[i].count_criterion + 1)%>"><%=arr[i].name %></td>
 						<td colspan="8"><%=arr[i].description %></td>
 						</tr>
-						<% for(let j = 0; j < arr[i].count_criterion; j++) {%>
+						<% for(let j = 0; j < arr[i].lines.length; j++) {%>
 						<tr>
-							<td><%=arr[i].criterion_description %></td>
-							<td><%=arr[i].name_criterion %></td>
-							<% for(let k = 0; k < arr[i].balls.length; k++) {%>
-								<td><big><%=arr[i].balls[k] %></big></td>
-							<%} %>
-							<% if(i != kpi[u].length && j != arr[i].count_criterion - 1) {%>
-								<% i = i + 1; %>
-							<%} %>
-							<% if(i == kpi[u].length) {%>
-								<% break top; %>
+							<td><%=arr[i].lines[j].description %></td>
+							<td><%=arr[i].lines[j].name %></td>
+							<% for(let k = 0; k < arr[i].lines[j].balls.length; k++) {%>
+								<td><big><%=arr[i].lines[j].balls[k] %></big></td>
 							<%} %>
 						<%} %>
+
 					</tr>
 					<%} %>
 			<%} %>
