--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -13,7 +13,7 @@
 		<div class="circle"></div>
 		<div class="form-inner">
 			<img src="/img/logo.png" alt="Логотип МТУСИ">
-			<h3>Введите данные</h3>
+			<h3>Вход в личный кабинет</h3>
 			<% if(close) {%>
 				<p class="errortext">Доступ к личным кабинетам закрыт</p>
 			<%} %>
@@ -21,9 +21,9 @@
 				<p class="errortext">Неправильно введен логин или пароль</p>
 			<%} %>
 			<label>Логин</label>
-			<input type="text" name="login"/><br>
+			<input type="text" name="login" placeholder="ivanov" required/><br>
 			<label>Пароль</label>
-			<input type="password" name="password"/>
+			<input type="password" name="password" placeholder="password" required/>
 			<input type="submit" name="submit" id="submit" value="Войти">
 		</div>
 	</form>
