--- a/views/admin/adduserfile.ejs
+++ b/views/admin/adduserfile.ejs
@@ -18,11 +18,28 @@
 			<% if(action == 2) {%>
 				<p class="errormess">Ошибка добавления</p>
 			<%} %>
+			<br>
+			<div>
+				<p>Необходимо прикрепить Excel-файл.</p>
+				<p>В каждой строке файла, начиная с первой (без перечисления названий в первой строке), 
+					должна содержаться информация о сотруднике в следующем формате:</p>
+				<p>В столбце <b>A</b> указывается полное ФИО сотрудника*</p>
+				<p>В столбце <b>B</b> указывается факультет, на котором работает сотрудник</p>
+				<p>В столбце <b>C</b> указывается кафедра, на которой работает сотрудник</p>
+				<p>В столбце <b>D</b> указывается должность сотрудника*</p>
+				<p>В столбце <b>E</b> указывается <i>уникальный</i> логин сотрудника*</p>
+				<p>В столбце <b>F</b> указывается пароль сотрудника*</p>
+				<p>* - обязательные к заполнению поля</p>
+			</div>
 			<form enctype="multipart/form-data" action="/adduserfile" 
 			method="post" class="formborderadmin">
 				<input type="file" name="file" required>
 				<input type="submit" class="buttonmypage" value="Добавить">
 			</form>
+			<p class="errormess">Внимание! При отсутствии информации о сотруднике ячейку столбца, 
+				соответсвующего данной информации оставить пустой, без каких-либо символов.
+				Если эта информация является обязательной к заполнению (отмечена *), 
+				то данную информацию стоит уточнить и записать в прикрепляемый Excel-файл.</p>
 		</div>
 		<div class="footer">
 			<%- include("../partials/footer.ejs") %>
