--- a/views/admin/tableuservalue.ejs
+++ b/views/admin/tableuservalue.ejs
@@ -19,7 +19,7 @@
 			<table>
 				<tr>
 					<th><h4>Дата добавления</h4></th>
-					<th><h4>ФИО</h4></th>
+					<th><h4>Логин сотрудника</h4></th>
 					<th><h4>ПЭД</h4></th>
 					<th><h4>Значение</h4></th>
 					<th><h4>Дата начала действия</h4></th>
@@ -30,7 +30,7 @@
 				<% for(let i = 0; i < balls.length; i++) {%>
 					<tr>
 						<td><%=balls[i].datestr %></td>
-						<td><%=balls[i].name %></td>
+						<td><%=balls[i].login_user %></td>
 						<td><%=balls[i].name_kpi %></td>
 						<td><%=balls[i].value %></td>
 						<td><%=balls[i].start_datestr %></td>
