--- a/views/partials/workersdep.ejs
+++ b/views/partials/workersdep.ejs
@@ -7,7 +7,7 @@
 	<input name="worker" list="worker" id="name" class="text" required autocomplete="off" style="width: 300px;">
 	<datalist id="worker" >
 		<% for(let i = 0; i < worker.length; i++) {%>
-			<option><%=(worker[i].name + ", " + worker[i].position)%></option>
+			<option data-value="<%=worker[i].login%>" value="<%=(worker[i].name + ', ' + worker[i].position)%>"></option>
 		<%} %>
 	</datalist>
 	<button id="submit" class="buttonmypage">Выбрать сотрудника</button>
