--- a/views/partials/postedVal.ejs
+++ b/views/partials/postedVal.ejs
@@ -68,7 +68,7 @@
 					<%} %>
 					<% if(!kpi[i].valid) {%>
 						<td class="errormess">Недействительно</td>
-						<td><%=kpi[i].author_verify %></td>
+						<td><%=kpi[i].name_author %></td>
 						<td><%=kpi[i].text_verify %></td>
 					<%} %>
 					<% if(kpi[i].valid) {%>
