--- a/views/valuekpi.ejs
+++ b/views/valuekpi.ejs
@@ -49,7 +49,7 @@
 							<%} %>
 							<% if(kpi[i].valid == 0) {%>
 								<td style="color:red;">Недействительно</td>
-								<td><%=kpi[i].author_verify %></td>
+								<td><%=kpi[i].name_author %></td>
 								<td><%=kpi[i].text_verify %></td>
 							<%} %>
 							<% if(kpi[i].valid == 1) {%>
