change the structure of project files

--- a/views/admin/kpi/page_delete_kpi.ejs
+++ b/views/admin/kpi/page_delete_kpi.ejs
@@ -12,7 +12,7 @@
 <body>
 	<div class="wrapper">
 		<div class="content">
-			<%- include("partials/menuadmin.ejs") %>
+			<%- include("../partials/menu.ejs") %>
 			<% if(action == 1) {%>
 				<p class="uspeshno">Успешно</p>
 			<%} %>
@@ -31,7 +31,7 @@
 		</div>
 
 		<div class="footer">
-			<%- include("../partials/footer.ejs") %>
+			<%- include("../../partials/footer.ejs") %>
 		</div>
 	</div>
 
