--- a/views/admin/page_close_account.ejs
+++ b/views/admin/page_close_account.ejs
@@ -10,7 +10,7 @@
 <body>
 	<div class="wrapper">
 		<div class="content">
-			<%- include("partials/menuadmin.ejs") %>
+			<%- include("partials/menu.ejs") %>
 
 			<div class="formborderadmin">
 			<% if(op) {%>
