--- a/views/admin/page_values_kpi.ejs
+++ b/views/admin/page_values_kpi.ejs
@@ -12,7 +12,7 @@
 <body>
 	<div class="wrapper">
 		<div class="content">
-			<%- include("partials/menuadmin.ejs") %>
+			<%- include("partials/menu.ejs") %>
 
 			<h3 class="nametable">Значения Показателей эффективности деятельности</h3>
 			<% if(balls.length != 0) {%>
