--- a/views/admin/user/page_add_users_from_file.ejs
+++ b/views/admin/user/page_add_users_from_file.ejs
@@ -11,7 +11,7 @@
 <body>
 	<div class="wrapper">
 		<div class="content">
-			<%- include("partials/menuadmin.ejs") %>
+			<%- include("../partials/menu.ejs") %>
 			<% if(action == 1) {%>
 				<p class="uspeshno">Успешно</p>
 			<%} %>
@@ -42,7 +42,7 @@
 				то данную информацию стоит уточнить и записать в прикрепляемый Excel-файл.</p>
 		</div>
 		<div class="footer">
-			<%- include("../partials/footer.ejs") %>
+			<%- include("../../partials/footer.ejs") %>
 		</div>
 	</div>
 	
