--- a/views/admin/page_set_period.ejs
+++ b/views/admin/page_set_period.ejs
@@ -11,7 +11,7 @@
 <body>
 	<div class="wrapper">
 		<div class="content">
-			<%- include("partials/menuadmin.ejs") %>
+			<%- include("partials/menu.ejs") %>
 
 
 			<div class="formborderadmin">
