--- a/views/pfu/page_pfu.ejs
+++ b/views/pfu/page_pfu.ejs
@@ -29,7 +29,7 @@
 	</div>
 		
 		<div class="footer">
-			<%- include("partials/footer.ejs") %>
+			<%- include("../partials/footer.ejs") %>
 		</div>
 	</div>
 
