--- a/views/pps/page_values_kpi.ejs
+++ b/views/pps/page_values_kpi.ejs
@@ -66,7 +66,7 @@
 			<%} %>
 		</div>
 		<div class="footer">
-			<%- include("partials/footer.ejs") %>
+			<%- include("../partials/footer.ejs") %>
 		</div>
 	</div>
 </body>
