--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -3,14 +3,11 @@
 <head>
 	<title>Вход в личный кабинет</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="./form.css">
+	<link rel="stylesheet" type="text/css" href="general_style/form.css">
 </head>
 <body>
 	<div class="auth">
 	<form name="authorizForm" action="/user" method="POST" class="form-add">
-		<div class="form-left-decoration"></div>
-		<div class="form-right-decoration"></div>
-		<div class="circle"></div>
 		<div class="form-inner">
 			<img src="/img/logo.png" alt="Логотип МТУСИ">
 			<h3>Вход в личный кабинет</h3>
