--- a/views/pfu/page_pfu.ejs
+++ b/views/pfu/page_pfu.ejs
@@ -3,8 +3,8 @@
 <head>
 	<title>ПФУ</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../footer.css">
-	<link rel="stylesheet" type="text/css" href="../stylebut.css">
+	<link rel="stylesheet" type="text/css" href="../general_style/footer.css">
+	<link rel="stylesheet" type="text/css" href="../general_style/stylebut.css">
 </head>
 
 <header>
@@ -23,7 +23,8 @@
 				</form>
 			<%} %> 
 			<% if(!setbool) {%>
-				<div>Не был установлен период для отчета</div>
+				<div><p>Не был установлен период для отчета.</p>
+					<p>Обратитесь к администратору сайта.</p></div>
 			<%} %>
 		</div>
 	</div>
