--- a/views/admin/kpi/page_add_kpi.ejs
+++ b/views/admin/kpi/page_add_kpi.ejs
@@ -31,7 +31,7 @@
 	</div>
 
 	<script type="text/javascript" src="../jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="../slick-1.8.1/slick/slick.min.js"></script>
+	<script type="text/javascript" src="../admin/slick-1.8.1/slick/slick.min.js"></script>
 	<script type="text/javascript" src="../admin/addkpi.js"></script>
 </body>
 </html>
