--- a/views/admin/main_page.ejs
+++ b/views/admin/main_page.ejs
@@ -3,10 +3,10 @@
 <head>
 	<title>История действий</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="../admin/menu.css">
-	<link rel="stylesheet" type="text/css" href="../admin/logs.css">
-	<link rel="stylesheet" type="text/css" href="../footer.css">	
-	<link rel="stylesheet" type="text/css" href="../stylebut.css">
+	<link rel="stylesheet" type="text/css" href="menu.css">
+	<link rel="stylesheet" type="text/css" href="logs.css">
+	<link rel="stylesheet" type="text/css" href="../general_style/footer.css">	
+	<link rel="stylesheet" type="text/css" href="../general_style/stylebut.css">
 	
 </head>
 <body>
