--- a/views/head/page_verify.ejs
+++ b/views/head/page_verify.ejs
@@ -3,9 +3,9 @@
 <head>
 	<title>Проверка значений</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="../footer.css">
-	<link rel="stylesheet" type="text/css" href="../stylebut.css">
-	<link rel="stylesheet" type="text/css" href="../list.css">
+	<link rel="stylesheet" type="text/css" href="../general_style/footer.css">
+	<link rel="stylesheet" type="text/css" href="../general_style/stylebut.css">
+	<link rel="stylesheet" type="text/css" href="../general_style/list.css">
 
 </head>
 <body>
