--- a/views/pps/page_add_value_kpi.ejs
+++ b/views/pps/page_add_value_kpi.ejs
@@ -3,10 +3,10 @@
 <head>
 	<title>Просмотр подтверждений ПЭДа</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="../list.css">
+	<link rel="stylesheet" type="text/css" href="../../general_style/list.css">
 	<link rel="stylesheet" type="text/css" href="editkpi.css">
-	<link rel="stylesheet" type="text/css" href="../footer.css">
-	<link rel="stylesheet" type="text/css" href="../stylebut.css">
+	<link rel="stylesheet" type="text/css" href="../../general_style/footer.css">
+	<link rel="stylesheet" type="text/css" href="../../general_style/stylebut.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -54,8 +54,8 @@
 	
 </div>
 
-	<script type="text/javascript" src="../jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="../../jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="editkpi.js"></script>
-	<script type="text/javascript" src="../findnumber.js"></script>
+	<script type="text/javascript" src="../../findnumber.js"></script>
 </body>
 </html>
