--- a/views/admin/partials/menu.ejs
+++ b/views/admin/partials/menu.ejs
@@ -4,24 +4,24 @@
 		<li><a href="/admin" style="border-left: 1px solid rgb(175, 175, 173);">Главная</a></li>
 		<li><a>Сотрудники</a>
 			<ul>
-				<li><a href="/admin/getusers">Список</a></li>
-				<li><a href="/admin/adduser">Добавить</a></li>
-				<li><a href="/admin/adduserfile">Добавить с файла</a></li>
-				<li><a href="/admin/deleteuser">Удалить</a></li>
+				<li><a href="/admin/users/get_users">Список</a></li>
+				<li><a href="/admin/users/add_user">Добавить</a></li>
+				<li><a href="/admin/users/add_users_from_file">Добавить с файла</a></li>
+				<li><a href="/admin/users/delete_user">Удалить</a></li>
 			</ul>
 		</li>
 		
 		<li><a>ПЭДы</a>
 			<ul>
-				<li><a href="/admin/getkpi">Список</a></li>
-				<li><a href="/admin/addkpi">Добавить</a></li>
-				<li><a href="/admin/deletekpi">Удалить</a></li>
-				<li><a href="/admin/editballs">Изменить оценки</a></li>
+				<li><a href="/admin/kpi/get_kpi">Список</a></li>
+				<li><a href="/admin/kpi/add_kpi">Добавить</a></li>
+				<li><a href="/admin/kpi/delete_kpi">Удалить</a></li>
+				<li><a href="/admin/kpi/edit_balls">Изменить оценки</a></li>
 			</ul>
 		</li>
-		<li><a href="/admin/getballusers">Значения ПЭД</a></li>
-		<li><a href="/admin/setperiod">Текущий период</a></li>
-		<li><a href="/admin/closeaccount">Доступ в личные кабинеты</a></li>
+		<li><a href="/admin/get_balls_of_users">Значения ПЭД</a></li>
+		<li><a href="/admin/set_period">Текущий период</a></li>
+		<li><a href="/admin/close_accounts">Доступ в личные кабинеты</a></li>
 		<li><form action="/exit" method="post"><button>Выход</button></form></li>
 	</ul>
 </nav>
