--- a/views/pps/page_add_value_kpi.ejs
+++ b/views/pps/page_add_value_kpi.ejs
@@ -54,7 +54,7 @@
 	
 </div>
 
-	<script type="text/javascript" src="../../jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="../../plugins/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="editkpi.js"></script>
 	<script type="text/javascript" src="../../findnumber.js"></script>
 </body>
