--- a/views/admin/kpi/page_edit_balls_kpi.ejs
+++ b/views/admin/kpi/page_edit_balls_kpi.ejs
@@ -79,7 +79,7 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="../jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="../plugins/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="../admin/editballs.js"></script>
 
 </body>
