--- a/views/admin/main_page.ejs
+++ b/views/admin/main_page.ejs
@@ -26,7 +26,7 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="../jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="../plugins/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="../admin/main.js"></script>
 </body>
 </html>
