--- a/views/admin/page_set_period.ejs
+++ b/views/admin/page_set_period.ejs
@@ -44,7 +44,7 @@
 		</div>
 	</div>
 	
-	<script type="text/javascript" src="../jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="../plugins/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="../admin/setperiod.js"></script>
 
 
