--- a/views/admin/users/page_add_user.ejs
+++ b/views/admin/users/page_add_user.ejs
@@ -27,8 +27,8 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="../jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="../carhartl-jquery-cookie-92b7715/jquery.cookie.js"></script>
+	<script type="text/javascript" src="../plugins/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="../plugins/carhartl-jquery-cookie-92b7715/jquery.cookie.js"></script>
 	<script type="text/javascript" src="../admin/adduser.js"></script>
 </body>
 </html>
