change the structure in folder 'public'

--- a/views/admin/kpi/page_add_kpi.ejs
+++ b/views/admin/kpi/page_add_kpi.ejs
@@ -3,13 +3,13 @@
 <head>
 	<title>Добавление Показателя</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="../form.css">
-	<link rel="stylesheet" type="text/css" href="../admin/menu.css">
-	<link rel="stylesheet" type="text/css" href="../admin/addkpi.css">
-	<link rel="stylesheet" type="text/css" href="../footer.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/form.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
+	<link rel="stylesheet" type="text/css" href="./addkpi.css">
 
-	<link rel="stylesheet" type="text/css" href="../slick-1.8.1/slick/slick.css">
-	<link rel="stylesheet" type="text/css" href="../slick-1.8.1/slick/slick-theme.css">
+	<link rel="stylesheet" type="text/css" href="/plugins/slick-1.8.1/slick/slick.css">
+	<link rel="stylesheet" type="text/css" href="/plugins/slick-1.8.1/slick/slick-theme.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -30,8 +30,8 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="../plugins/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="../admin/slick-1.8.1/slick/slick.min.js"></script>
-	<script type="text/javascript" src="../admin/addkpi.js"></script>
+	<script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="/plugins/slick-1.8.1/slick/slick.min.js"></script>
+	<script type="text/javascript" src="./addkpi.js"></script>
 </body>
 </html>
