--- a/views/admin/users/page_add_user.ejs
+++ b/views/admin/users/page_add_user.ejs
@@ -3,10 +3,10 @@
 <head>
 	<title>Добавление пользователя</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="../form.css">
-	<link rel="stylesheet" type="text/css" href="../admin/menu.css">
-	<link rel="stylesheet" type="text/css" href="../footer.css">
-	<link rel="stylesheet" type="text/css" href="../stylebut.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/form.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -27,8 +27,8 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="../plugins/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="../plugins/carhartl-jquery-cookie-92b7715/jquery.cookie.js"></script>
-	<script type="text/javascript" src="../admin/adduser.js"></script>
+	<script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="/plugins/carhartl-jquery-cookie-92b7715/jquery.cookie.js"></script>
+	<script type="text/javascript" src="./adduser.js"></script>
 </body>
 </html>
