--- a/views/admin/users/page_table_users.ejs
+++ b/views/admin/users/page_table_users.ejs
@@ -3,9 +3,9 @@
 <head>
 	<title>Сотрудники</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="../admin/menu.css">
-	<link rel="stylesheet" type="text/css" href="../list.css">
-	<link rel="stylesheet" type="text/css" href="../footer.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/list.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
 </head>
 <body>
 	<div class="wrapper">
