--- a/views/error/404.ejs
+++ b/views/error/404.ejs
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h3>Страница не найдена:(</h3>
+	<a href="/">Вернуться к сайту</a>
 	<style type="text/css">
 		h3 {
 			color: red;
