--- a/views/pfu/page_pfu.ejs
+++ b/views/pfu/page_pfu.ejs
@@ -3,8 +3,8 @@
 <head>
 	<title>ПФУ</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../general_style/footer.css">
-	<link rel="stylesheet" type="text/css" href="../general_style/stylebut.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
 </head>
 
 <header>
