--- a/views/admin/kpi/page_delete_kpi.ejs
+++ b/views/admin/kpi/page_delete_kpi.ejs
@@ -3,10 +3,10 @@
 <head>
 	<title>Удаление ПЭДа</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../admin/menu.css">
-	<link rel="stylesheet" type="text/css" href="../footer.css">
-	<link rel="stylesheet" type="text/css" href="../stylebut.css">
-	<link rel="stylesheet" type="text/css" href="../form.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/form.css">
 
 </head>
 <body>
