--- a/views/admin/kpi/page_edit_balls_kpi.ejs
+++ b/views/admin/kpi/page_edit_balls_kpi.ejs
@@ -3,11 +3,11 @@
 <head>
 	<title>Изменить оценки</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="../list.css">
-	<link rel="stylesheet" type="text/css" href="../admin/menu.css">
-	<link rel="stylesheet" type="text/css" href="../footer.css">
-	<link rel="stylesheet" type="text/css" href="../stylebut.css">
-	<link rel="stylesheet" type="text/css" href="../form.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/list.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/form.css">
 
 </head>
 <body>
@@ -79,8 +79,8 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="../plugins/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="../admin/editballs.js"></script>
+	<script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="./editballs.js"></script>
 
 </body>
 </html>
