--- a/views/admin/main_page.ejs
+++ b/views/admin/main_page.ejs
@@ -3,11 +3,10 @@
 <head>
 	<title>История действий</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="menu.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">	
+	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
 	<link rel="stylesheet" type="text/css" href="logs.css">
-	<link rel="stylesheet" type="text/css" href="../general_style/footer.css">	
-	<link rel="stylesheet" type="text/css" href="../general_style/stylebut.css">
-	
 </head>
 <body>
 	<div class="wrapper">
@@ -26,7 +25,7 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="../plugins/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="../admin/main.js"></script>
+	<script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
