--- a/views/admin/page_close_account.ejs
+++ b/views/admin/page_close_account.ejs
@@ -3,9 +3,9 @@
 <head>
 	<title>Закрыть кабинеты</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="../admin/menu.css">
-	<link rel="stylesheet" type="text/css" href="../footer.css">
-	<link rel="stylesheet" type="text/css" href="../stylebut.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
 </head>
 <body>
 	<div class="wrapper">
