--- a/views/admin/page_set_period.ejs
+++ b/views/admin/page_set_period.ejs
@@ -3,9 +3,9 @@
 <head>
 	<title>Установка периода</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../admin/menu.css">
-	<link rel="stylesheet" type="text/css" href="../footer.css">
-	<link rel="stylesheet" type="text/css" href="../stylebut.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
 	
 </head>
 <body>
@@ -44,8 +44,8 @@
 		</div>
 	</div>
 	
-	<script type="text/javascript" src="../plugins/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="../admin/setperiod.js"></script>
+	<script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="./setperiod.js"></script>
 
 
 </body>
