--- a/views/admin/page_values_kpi.ejs
+++ b/views/admin/page_values_kpi.ejs
@@ -3,11 +3,9 @@
 <head>
 	<title>Значения ПЭД</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../list.css">
-	<link rel="stylesheet" type="text/css" href="../admin/menu.css">
-	<link rel="stylesheet" type="text/css" href="../footer.css">
-	<link rel="stylesheet" type="text/css" href="../stylebut.css">
-	<link rel="stylesheet" type="text/css" href="../form.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/list.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
 </head>
 <body>
 	<div class="wrapper">
