--- a/views/head/page_verify.ejs
+++ b/views/head/page_verify.ejs
@@ -68,9 +68,8 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="../jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="../carhartl-jquery-cookie-92b7715/jquery.cookie.js"></script>
-	<script type="text/javascript" src="../verify/verify.js"></script>
-	<script type="text/javascript" src="../findnumber.js"></script>
+	<script type="text/javascript" src="../plugins/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="../plugins/carhartl-jquery-cookie-92b7715/jquery.cookie.js"></script>
+	<script type="text/javascript" src="./verify.js"></script>
 </body>
 </html>
