--- a/views/head/page_verify.ejs
+++ b/views/head/page_verify.ejs
@@ -17,7 +17,7 @@
 					<button class="exitt" >Выход</button></form>
 			<%} %>
 			<% if(!mypage) {%>
-				<a href="/mypage" class="exitt" >Назад</a>
+				<a href="/my_page" class="exitt" >Назад</a>
 			<%} %> 
 				
 		</header>
