--- a/views/pps/page_add_value_kpi.ejs
+++ b/views/pps/page_add_value_kpi.ejs
@@ -4,14 +4,14 @@
 	<title>Просмотр подтверждений ПЭДа</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="/general_style/list.css">
-	<link rel="stylesheet" type="text/css" href="editkpi.css">
+	<link rel="stylesheet" type="text/css" href="edit_kpi.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
 </head>
 <body>
 	<div class="wrapper">
 		<header>
-			<a href="/mypage" class="exitt" >Назад</a>
+			<a href="/my_page" class="exitt" >Назад</a>
 		</header>
 		<div class="content">
 			<h2 style="margin-left: 10px; margin-top: -10px;">Отметить выполнение ПЭД</h2>
@@ -55,6 +55,6 @@
 </div>
 
 	<script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="editkpi.js"></script>
+	<script type="text/javascript" src="edit_kpi.js"></script>
 </body>
 </html>
