--- a/views/admin/page_set_period.ejs
+++ b/views/admin/page_set_period.ejs
@@ -22,7 +22,7 @@
 						<input type="submit" class="buttonmypage" value="Оповестить работников">
 					</form><br>
 				<%} %>
-				<form action="/setperiod" method="post">
+				<form action="/set_period" method="post">
 					<input type="submit" class="buttonmypage" value="Удалить период">
 				</form>
 			<%} %>
@@ -30,7 +30,7 @@
 				<p>Текущий период не установлен</p>
 				<p>Установить новый период:</p>
 				<div id="text"></div>
-				<form action="/setperiod" method="post">
+				<form action="/set_period" method="post">
 					с <input type="date" class="date" name="date1" id="date1" required>
 					 до <input type="date" class="date" name="date2" id="date2" required>
 					<input type="submit" id="sub" class="buttonmypage" value="Установить">
