--- a/views/admin/kpi/page_edit_balls_kpi.ejs
+++ b/views/admin/kpi/page_edit_balls_kpi.ejs
@@ -21,7 +21,7 @@
 				<% if(action == 2) {%>
 					<p class="errormess">Ошибка изменения оценок</p>
 				<%} %>
-				<form name="editballs" class="formborderadmin"  action="admin/kpi/edit_balls" method="GET">
+				<form name="editballs" class="formborderadmin"  action="" method="GET">
 					
 					<label for="name" class="text">Показатель эффективности</label>
 					<select name="name" class="text" id="namekpi" id="name">
