--- a/views/admin/kpi/page_delete_kpi.ejs
+++ b/views/admin/kpi/page_delete_kpi.ejs
@@ -19,7 +19,7 @@
 			<% if(action == 2) {%>
 				<p class="errormess">Ошибка удаления ПЭДа</p>
 			<%} %>
-			<form name="deletekpi" action="/deletekpi"  class="formborderadmin" method="post">
+			<form name="deletekpi" action="" class="formborderadmin" method="post">
 				<label for="name" class="text">Показатель эффективности</label>
 				<select name="name"  class="text" id="name">
 					<% for(let i = 0; i < kpi.length; i++) {%>
