--- a/views/admin/users/page_delete_user.ejs
+++ b/views/admin/users/page_delete_user.ejs
@@ -20,7 +20,7 @@
 			<% if(action == 2) {%>
 				<p class="errormess">Ошибка удаления</p>
 			<%} %>
-			<form name="deleteuser" action="/deleteuser" 
+			<form name="deleteuser" action="" 
 			class="formborderadmin" method="post" autocomplete="off">
 				<label for="users">Сотрудник:</label>
 				<input name="user" list="users" style="width: 35%; font-size: 16px;" required>
