--- a/views/admin/users/partials/form_add_user.ejs
+++ b/views/admin/users/partials/form_add_user.ejs
@@ -1,4 +1,4 @@
-<form name="adduser" action="/adduser" method="post" class="form-add" style="margin-top: 5%;">
+<form name="adduser" action="" method="post" class="form-add" style="margin-top: 5%;">
 	<div class="form-inner">
 		<h3>Добавить пользователя</h3>
 		<div class="" id="error"></div>
