--- a/views/admin/kpi/partials/form_add_kpi.ejs
+++ b/views/admin/kpi/partials/form_add_kpi.ejs
@@ -1,4 +1,4 @@
-<form name="addkpi" action="/addkpi" method="post" class="form-add" style="width: 80%; margin-top: 5%;">
+<form name="addkpi" action="" method="post" class="form-add" style="width: 80%; margin-top: 5%;">
 	<div class="form-inner">
 		<h3>Добавить Показатель эффективности деятельности</h3>
 		<div class="" id="error"></div>
