--- a/views/admin/users/page_add_user.ejs
+++ b/views/admin/users/page_add_user.ejs
@@ -29,6 +29,6 @@
 
 	<script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="/plugins/carhartl-jquery-cookie-92b7715/jquery.cookie.js"></script>
-	<script type="text/javascript" src="./adduser.js"></script>
+	<script type="text/javascript" src="./add_user.js"></script>
 </body>
 </html>
