--- a/views/admin/users/page_add_users_from_file.ejs
+++ b/views/admin/users/page_add_users_from_file.ejs
@@ -31,7 +31,7 @@
 				<p>В столбце <b>F</b> указывается пароль сотрудника*</p>
 				<p>* - обязательные к заполнению поля</p>
 			</div>
-			<form enctype="multipart/form-data" action="/adduserfile" 
+			<form enctype="multipart/form-data" action="" 
 			method="post" class="formborderadmin">
 				<input type="file" name="file" required>
 				<input type="submit" class="buttonmypage" value="Добавить">
